removed audio message delay